src/test/ui/error-codes/E0459.stderr
error[E0459]: #[link(...)] specified without `name = "foo"`
  --> $DIR/E0459.rs:11:1
   |
11 | #[link(kind = "dylib")] extern {} //~ ERROR E0459
   | ^^^^^^^^^^^^^^^^^^^^^^^ missing `name` argument

error: aborting due to previous error

