src/test/ui/error-codes/E0459.rs
#[link(kind = "dylib")] extern {} //~ ERROR E0459

fn main() {
}
